# microcsound

./: .microcsound.toml  LICENSE.txt  README.md  README.rst  README.txt  build_and_push.sh  pyproject.toml  setup.py
microcsound/: __init__.py  config.py  constants.py  handlers.py  helpers.py  main.py  parser.py  state.py  tests.py
microcsound.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
microcsound/share/data/: 8bit.orc  JI_robot_fingers.mc  ciconia.mc  gabrieli_canzon_1_saw.mc  microcsound.orc  microcsound_basic.orc  scale.mc
microcsound/share/doc/: CHANGES  microcsound_tutorial.txt
