[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microcsound"
version = "1.2.1"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Aaron Krister Johnson", email = "akjmicro@gmail.com"}

]
maintainers = [
  {name = "Aaron Krister Johnson", email = "akjmicro@gmail.com"}
]
description = """
A tool for writing csound scores that can make \
handling microtones MUCH easier."""
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["csound", "microtonal", "microtonality"]

[project.urls]
Homepage = "https://untwelve.org/microcsound"
Repository =  "https://github.com/akjmicro/microcsound"

[project.scripts]
microcsound = "microcsound.main:main"
